<resources>
    <string name="app_name">MyHelperApp</string>
    <string name="recycler_view">Recycler View</string>
    <string name="nav_drawer_with_recycler_view">Nav Drawer with Recycler View</string>
    <string name="nav_drawer_with_sub_menu">Nav Drawer with Sub Menu</string>
    <string name="navigation_drawer_with_submenu">Navigation Drawer with Submenu</string>
    <string name="developed_by_rahul_dev">Developed by Rahul Dev</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="custom_drawer">Custom Drawer</string>
    <string name="kotlin_coroutine">Kotlin Coroutine</string>
    <string name="download_user_date">Download User Date</string>
    <string name="increase_count">Increase Count</string>
    <string name="useful_layout_and_widgets">Useful Layout and Widgets</string>
    <string name="table_layout">Table Layout</string>
    <string name="residential">Residential</string>
    <string name="camera">Camera</string>
    <string name="take_picture">Take Picture</string>
    <string name="custom_popup">Custom Popup</string>
    <string name="web_view">Web View</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="text_intro1">Android</string>
    <string name="text_intro2">Artificial Intelligence</string>
    <string name="text_intro3">Cloud Computing</string>
    <string name="desc_intro1">Loves it and Passionate about it</string>
    <string name="desc_intro2">Attracted by this word</string>
    <string name="desc_intro3">Learning</string>
</resources>